--- a/index.html
+++ b/index.html
@@ -18,11 +18,55 @@
 
         <section class="form-container">
             <form action="reslt.html" method="get">
+
                 <div class="input-box">
                     <label for="name">Name</label>
                     <br>
-                    <input type="text" name="name" id="name" placeholder="Enter your name">
+                    <input type="text" name="name" id="name" placeholder="Enter Your Name">
                 </div>
+
+                <div class="input-box">
+                    <label for="age">Age</label>
+                    <br>
+                    <input type="number" name="age" id="age" placeholder="Age">
+                </div>
+
+                <div class="input-box">
+                    <label for="email">Email</label>
+                    <br>
+                    <input type="email" name="email" id="email" placeholder="Enter Your Email">
+                </div>
+
+                <div class="input-box">
+                    <label for="content">Content Type</label>
+                    <br>
+                    <select name="content-type" id="content-type">
+                        <option value="" disabled selected>Select an optiojn</option>
+                        <option value="movies">Movies</option>
+                        <option value="series">Series</option>
+                        <option value="tv-shows">TV Shows</option>
+                    </select>
+                </div>
+
+                <div class="input-box">
+                    <label for="">Movie Type</label>
+                    <br>
+                    <input type="checkbox" id="comedy" name="movie" value="comedy"><label for="comedy">Comedy</label>
+                    <br>
+                    <input type="checkbox" id="action" name="movie" value="action"><label for="action">Action</label>
+                    <br><input type="checkbox" id="romance" name="movie" value="romance"><label
+                        for="romance">Romance</label>
+                </div>
+
+                <div class="input-box">
+                    <label for="">Gender</label>
+                    <br>
+                    <input type="radio" id="male" name="gender" value="male"><label for="male">Male</label>
+                    <br>
+                    <input type="radio" id="female" name="gender" value="female"><label for="female">Female</label>
+                    <br><input type="radio" id="other" name="gender" value="other"><label for="other">Other</label>
+                </div>
+
             </form>
         </section>
     </div>
