index.html done

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
                     <br><input type="radio" id="other" name="gender" value="other"><label for="other">Other</label>
                 </div>
 
+                <div class="input-box">
+                    <label for="feedback">Feedback</label>
+                    <br>
+                    <textarea name="feedback" id="feedback" placeholder="Any comment"></textarea>
+                </div>
+
+                <div class="form-submit">
+                    <button class="form-btn" type="submit">Send</button>
+                </div>
+
             </form>
         </section>
     </div>
