--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="input-box">
                     <label for="feedback">Feedback</label>
                     <br>
-                    <textarea name="feedback" id="feedback" placeholder="Any comment"></textarea>
+                    <textarea class="feedback" name="feedback" id="feedback" placeholder="Any comment"></textarea>
                 </div>
 
                 <div class="form-submit">
